[gd_scene load_steps=6 format=2]

[ext_resource path="res://dag_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Dag.gd" type="Script" id=2]
[ext_resource path="res://ASSETS/Assets/soundsandmusic/sounds/jump1.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0

[node name="Dag" type="KinematicBody2D"]
position = Vector2( 32, 32 )
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "fire"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -35.0
pitch_scale = 1.4

[node name="Wallchecker" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
